gccida/c3/display_target_options
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/display_target_options/src/toplev.c:4207:7: error: use of undeclared identifier 'display_target_options_displayed'; did you mean 'display_target_options'?
if ( !display_target_options_displayed ) 
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      display_target_options
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/display_target_options/src/toplev.c:4196:7: note: 'display_target_options' declared here
void  display_target_options( ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/display_target_options/src/toplev.c:4209:1: error: use of undeclared identifier 'display_target_options_displayed'
display_target_options_displayed = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/display_target_options/src/obj/toplev.o] Error 1
